make project page responsive and fix alignment issues

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -18,11 +18,6 @@ img {
 	border-radius: 5px;
 }
 
-.visualizer {
-	width: 50%;
-	height: 50%;
-}
-
 .resume {
     border-style: solid;
     border-width: 1px;
